--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java'
+    id "java"
 }
 
 group "com.celeste.tasks"
@@ -15,6 +15,8 @@ def junit = "5.7.0"
 repositories {
     mavenLocal()
     mavenCentral()
+
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
