--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ def junit = "5.7.0"
 repositories {
     mavenLocal()
     mavenCentral()
+
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -44,5 +46,5 @@ jar {
 }
 
 tasks.withType(JavaCompile) {
-    options.encoding = "UTF-8"
+    options.encoding = 'UTF-8'
 }
