--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "java"
+    id 'java'
 }
 
 group "com.celeste.tasks"
@@ -16,7 +16,7 @@ repositories {
     mavenLocal()
     mavenCentral()
 
-    maven { url 'https://jitpack.io' }
+    maven { url "https://jitpack.io" }
 }
 
 dependencies {
@@ -42,7 +42,7 @@ dependencies {
 }
 
 jar {
-    from "LICENSE.md"
+    from 'LICENSE.md'
 }
 
 tasks.withType(JavaCompile) {
