Try to fix gradle error #9

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id "java"
-    id "com.github.johnrengelman.shadow" version "6.1.0"
 }
 
 group "com.celeste.tasks"
@@ -16,8 +15,6 @@ def junit = "5.7.0"
 repositories {
     mavenLocal()
     mavenCentral()
-
-    maven { url "https://jitpack.io" }
 }
 
 dependencies {
@@ -47,5 +44,5 @@ jar {
 }
 
 tasks.withType(JavaCompile) {
-    options.encoding = "UTF-8"
+    options.encoding = 'UTF-8'
 }
