--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 plugins {
-    id "java"
+    id 'java'
 }
 
-group "com.celeste.tasks"
-version "1.0.0-SNAPSHOT"
+group 'com.celeste.tasks'
+version '1.0.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -40,7 +40,7 @@ dependencies {
 }
 
 jar {
-    from "LICENSE.md"
+    from 'LICENSE.md'
 }
 
 tasks.withType(JavaCompile) {
