--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 plugins {
-    id 'java'
+    id "java"
 }
 
-group 'com.celeste.tasks'
-version '1.0.0-SNAPSHOT'
+group "com.celeste.tasks"
+version "1.0.0-SNAPSHOT"
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -15,6 +15,8 @@ def junit = "5.7.0"
 repositories {
     mavenLocal()
     mavenCentral()
+
+    maven { url "https://jitpack.io" }
 }
 
 dependencies {
@@ -40,9 +42,5 @@ dependencies {
 }
 
 jar {
-    from 'LICENSE.md'
-}
-
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
+    from "LICENSE.md"
 }
