--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,14 @@
 plugins {
+    id "com.github.johnrengelman.shadow" version "7.0.0"
+    id "maven-publish"
     id "java"
 }
 
 group "com.celeste.tasks"
-version "1.0.0-SNAPSHOT"
+version "1.0.1-SNAPSHOT"
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
-def lombok = "1.18.20"
-def jetbrains = "21.0.1"
-def junit = "5.7.0"
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
     mavenLocal()
@@ -18,31 +16,39 @@ repositories {
 }
 
 dependencies {
-    /**
-     * LIBRARY FRAMEWORK
-     */
     implementation "com.google.guava:guava:30.1.1-jre"
 
-    /**
-     * ANNOTATION FRAMEWORK
-     */
-    compileOnly "org.projectlombok:lombok:${lombok}"
-    annotationProcessor "org.projectlombok:lombok:${lombok}"
+    compileOnly "org.projectlombok:lombok:1.18.20"
+    annotationProcessor "org.projectlombok:lombok:1.18.20"
 
-    compileOnly "org.jetbrains:annotations:${jetbrains}"
-    annotationProcessor "org.jetbrains:annotations:${jetbrains}"
+    compileOnly "org.jetbrains:annotations:22.0.0"
+    annotationProcessor "org.jetbrains:annotations:22.0.0"
 
-    /**
-     * TEST FRAMEWORK
-     */
-    testCompileOnly "org.junit.jupiter:junit-jupiter-api:${junit}"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junit}"
-}
-
-jar {
-    from 'LICENSE.md'
+    testCompileOnly "org.junit.jupiter:junit-jupiter-api:5.7.2"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.2"
 }
 
 tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
+    options.encoding = "UTF-8"
+}
+
+tasks.withType(Jar) {
+    from "LICENSE.md"
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
+}
+
+shadowJar {
+    relocate "com.fasterxml.jackson", "com.celeste.configuration.jackson"
+    relocate "org.yaml.snakeyaml", "com.celeste.configuration.snakeyaml"
+
+    relocate "com.google.common", "com.celeste.configuration.guava"
+
+    archiveFileName = "Configuration-${project.version}.jar"
 }
