--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group "com.celeste.tasks"
-version "1.0.1-SNAPSHOT"
+version "1.0.2-SNAPSHOT"
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
@@ -16,16 +16,18 @@ repositories {
 }
 
 dependencies {
-    implementation "com.google.guava:guava:30.1.1-jre"
+    def lombok = "org.projectlombok:lombok:1.18.22"
+    def annotations = "org.jetbrains:annotations:22.0.0"
 
-    compileOnly "org.projectlombok:lombok:1.18.20"
-    annotationProcessor "org.projectlombok:lombok:1.18.20"
+    implementation 'com.google.guava:guava:31.0.1-jre'
 
-    compileOnly "org.jetbrains:annotations:22.0.0"
-    annotationProcessor "org.jetbrains:annotations:22.0.0"
+    compileOnly lombok, annotations
+    annotationProcessor lombok, annotations
 
-    testCompileOnly "org.junit.jupiter:junit-jupiter-api:5.7.2"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.2"
+    def junit = "5.8.2"
+
+    testCompileOnly "org.junit.jupiter:junit-jupiter-api:${junit}"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junit}"
 }
 
 tasks.withType(JavaCompile) {
