--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id "java"
 }
 
-group "com.celeste.tasks"
+group "com.cefoler.tasks"
 version "1.1.0-SNAPSHOT"
 
 sourceCompatibility = JavaVersion.VERSION_17
